# RPN_complex_C

./: .gitignore  CMakeLists.txt  README.md  RPNc.c  build.sh  list.c  node.c  populate_criterion.sh  selector.c  stack.c  test.sh
head/: list.h  selector.h
include/: RPN.h  eval.h  list.h  node.h  rpn.h  stack.h  utils.h
src/: RPN.c  RPNc.c  eval.c  list.c  main.c  node.c  rpn.c  selector.c  stack.c  utils.c
src/test/: list_test.c  node_test.c
